--- a/.github/workflows/github-actions-backend.yaml
+++ b/.github/workflows/github-actions-backend.yaml
@@ -28,7 +28,7 @@ jobs:
           context: .
           file: ./backend/dockerfile
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:initial-v1
+          tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:initial-backend-v1
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
