--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -4,11 +4,11 @@ RUN mkdir /app
 
 WORKDIR /app
 
-COPY ./app/requirements.txt ./
+COPY ./app/requirements.txt /app
 
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-COPY ./app ./
+COPY ./app /app
 
 EXPOSE 8000
 
