--- a/.github/workflows/github-actions-backend.yaml
+++ b/.github/workflows/github-actions-backend.yaml
@@ -12,6 +12,9 @@ jobs:
       - name: Check out the code
         uses: actions/checkout@v2
 
+      - name: List directories in root
+        run: ls -la
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -26,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./backend/dockerfile
+          file: ./backend/Dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:initial-backend-v1
 
