--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,14 +1,12 @@
 FROM python:3.10-slim
 
-RUN mkdir /app
-
 WORKDIR /app
 
-COPY ./app/requirements.txt /app
+COPY ./app/requirements.txt ./
 
 RUN pip3 install --no-cache-dir -r requirements.txt
 
-COPY ./app /app
+COPY ./app ./
 
 EXPOSE 8000
 
