--- a/.github/workflows/github-actions-backend.yaml
+++ b/.github/workflows/github-actions-backend.yaml
@@ -13,14 +13,13 @@ jobs:
         uses: actions/checkout@v2
 
       - name: List directories in root
-        working-directory: ./backend
-        run: ls -la
+        # working-directory: ./backend
+        run: ls -la && pwd
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
       - name: Log in to GitHub Container Registry
-        working-directory: ./backend
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
@@ -28,7 +27,7 @@ jobs:
           password: ${{ secrets.GHCR_SECRET_NAME }}
 
       - name: Build and push Docker image
-        working-directory: ./backend
+        # working-directory: ./backend
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -37,5 +36,5 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:initial-backend-v1
 
       - name: Image digest
-        working-directory: ./backend
+        # working-directory: ./backend
         run: echo ${{ steps.docker_build.outputs.digest }}
