--- a/.github/workflows/github-actions-backend.yaml
+++ b/.github/workflows/github-actions-backend.yaml
@@ -27,7 +27,7 @@ jobs:
           password: ${{ secrets.GHCR_SECRET_NAME }}
 
       - name: Build and push Docker image
-        # working-directory: ./backend
+        working-directory: /home/runner/work/github-acitons-2-backend/github-acitons-2-backend/backend
         uses: docker/build-push-action@v2
         with:
           context: .
