--- a/.github/workflows/github-actions-backend.yaml
+++ b/.github/workflows/github-actions-backend.yaml
@@ -29,9 +29,7 @@ jobs:
       - name: Build and push Docker image
         working-directory: /home/runner/work/github-acitons-2-backend/github-acitons-2-backend/backend
         uses: docker/build-push-action@v6
-        with:
-          # context: .
-          # file: ./dockerfile
+        with:  # context: .   # file: ./dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:initial-backend-v1
 
