--- a/.github/workflows/github-actions-backend.yaml
+++ b/.github/workflows/github-actions-backend.yaml
@@ -27,9 +27,11 @@ jobs:
           password: ${{ secrets.GHCR_SECRET_NAME }}
 
       - name: Build and push Docker image
-        working-directory: /home/runner/work/github-acitons-2-backend/github-acitons-2-backend/backend
+        # working-directory: /home/runner/work/github-acitons-2-backend/github-acitons-2-backend/backend
         uses: docker/build-push-action@v6
-        with:  # context: .   # file: ./dockerfile
+        with:
+          context: .
+          file: ./backend/dockerfile
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/${{ github.repository }}:initial-backend-v1
 
